Test added for UDP server

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,14 +11,13 @@ include("${CMAKE_CURRENT_SOURCE_DIR}/cmake/GoogleTestHelper.cmake")
 
 # Boost Configuration
 set(BOOST_VERSION 1.82.0)
-set(BOOST_COMPONENTS filesystem program_options chrono context coroutine system thread date_time atomic)
+set(BOOST_COMPONENTS filesystem program_options chrono context system date_time atomic)
 configure_boost(${BOOST_VERSION} "${BOOST_COMPONENTS}")
 print_boost_libraries("${Boost_LIBRARIES}")
 
 # Tests
 enable_testing()
 configure_googletest()
-add_subdirectory(tests)
 
 # Modules
 add_subdirectory(modules/client)
