--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,9 +1,11 @@
 cmake_minimum_required(VERSION 3.27)
-project(VaySenderReceiver)
+project(CppClientServer)
 
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(CMAKE_BUILD_TYPE Debug)
+
+set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 
 # Includes
 include("${CMAKE_CURRENT_SOURCE_DIR}/cmake/BoostBuildHelper.cmake")
